--- a/SlpkDemo/appsettings.json
+++ b/SlpkDemo/appsettings.json
@@ -15,7 +15,7 @@
   },
   "slpk": {
     "pathBase": "/slpk",
-    "rootFolder": "/Users/zhang/Desktop/slpk",
+    "rootFolder": "~/Desktop/slpk",
     "indexFiles": [
       "3dNodeIndexDocument.json.gz",
       "3dNodeIndexDocument.json",
